[package]
name = "sudoku-server"
version = "0.1.0"
authors = ["Benjamin Woodruff <github@benjam.info>"]
edition = "2018"

[dependencies]
env_logger = "~0.7.1"
futures = "~0.3.5"
log = "~0.4.11"
once_cell = "~1.4.1"
rand = "~0.7.3"
serde = { version = "~1.0.116", features = ["derive"] }
serde_json = "~1.0.58"
tokio = { version = "~0.2.22", features = ["rt-core", "rt-threaded", "macros", "sync" ] }
warp = { version = "~0.2.5", default_features = false, features = ["websocket"] }
