[package]
name = "sudoku-server"
version = "0.1.0"
authors = ["Benjamin Woodruff <github@benjam.info>"]
edition = "2018"

[features]
default = ["sql"]
sql = ["sqlx"]

[dependencies]
chrono = "~0.4.19"
clap = "3.0.0-beta.2"
fern = { version = "~0.6.0", features = ["colored"] }
futures = "~0.3.8"
log = { version = "~0.4.11", features = ["serde"] }
once_cell = "~1.4.1"
rand = "~0.7.3"
serde = { version = "~1.0.116", features = ["derive"] }
serde_json = "~1.0.58"
signal-hook = { version = "~0.1.16", features = ["tokio-support"] }
tokio = { version = "~0.2.22", features = ["rt-core", "rt-threaded", "macros", "sync"] }
toml = "~0.5.7"
warp = { version = "~0.2.5", default_features = false, features = ["websocket"] }

# optional dependencies
sqlx = { version = "~0.4.1", features = ["macros", "migrate", "offline", "runtime-tokio-native-tls", "sqlite"], optional = true}
